syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProcessStepTypeParameterInfo {
	//ID 
    string id=1;
    //工步类型ID
    string processStepTypeID=2;
	//代号 
 	string code=3;
	//描述 
    string description=4;
    //默认值
    string defaultValue=9;
    //标准值
    string standardValue=14;
    //最大值
    string maximumValue=10;
    //最小值
    string minimumValue=11;
    //单位
    string unit=12;
	//是否必填 
 	bool required=5;
	//是否上下限 
 	bool boundsRequired=6;
	//参数类型 true-输入 false-输出 
 	bool parameterType=7;
	//备注 
 	string remark=8;
}

message QueryTestProjectMatchRuleRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryTestProjectMatchRuleResponse{
    Code code=1;
    string message=2;
    repeated ProcessStepTypeParameterInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllTestProjectMatchRuleResponse{
    Code code=1;
    string message=2;
    repeated ProcessStepTypeParameterInfo data=3;
}

message GetTestProjectMatchRuleDetailResponse{
    Code code=1;
    string message=2;
    ProcessStepTypeParameterInfo data=3;
}